firewall/iptables.conf
# MANGLE
#------------------------------------------------
*mangle
:PREROUTING ACCEPT [277:25629]
:INPUT ACCEPT [277:25629]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [135:14731]
:POSTROUTING ACCEPT [135:14731]
:CGNAT - [0:0]
:FW_IN_HOOK - [0:0]
:FW_LOCALOUT_HOOK - [0:0]
:FW_OUT_HOOK - [0:0]
:PBR_2 - [0:0]
-A PREROUTING -j FW_IN_HOOK
-A OUTPUT -j FW_LOCALOUT_HOOK
-A POSTROUTING -j FW_OUT_HOOK


#PBR-BEGIN
-A CGNAT -m comment --comment "CGNAT" --source 177.86.144.0/24 --destination 0.0.0.0/0 -j PBR_2
-A CGNAT -m comment --comment "CGNAT" --source 191.240.203.0/24 --destination 0.0.0.0/0 -j PBR_2
-A CGNAT -m comment --comment "CGNAT" --source 191.240.201.0/24 --destination 0.0.0.0/0 -j PBR_2
-A CGNAT -m comment --comment "CGNAT" --source 177.86.146.0/24 --destination 0.0.0.0/0 -j PBR_2
-A CGNAT -m comment --comment "CGNAT" --source 172.17.0.0/22 --destination 0.0.0.0/0 -j PBR_2
-A CGNAT -m comment --comment "CGNAT" --source 100.64.0.0/10 --destination 0.0.0.0/0 -j PBR_2

-A FW_IN_HOOK -i ipoe+ -j CGNAT
-A FW_IN_HOOK -i ppp+ -j CGNAT
-A PBR_2 -j MARK --set-xmark 0x80000001/0xffffffff
-A PBR_2 -j ACCEPT
COMMIT




# NAT
#------------------------------------------------
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:PRE_DNAT_HOOK - [0:0]
:PRE_SNAT_HOOK - [0:0]
-A PREROUTING -j PRE_DNAT_HOOK
-A POSTROUTING -j PRE_SNAT_HOOK
-A PRE_DNAT_HOOK -j RETURN
-A PRE_SNAT_HOOK -j RETURN
COMMIT




# FILTER
#------------------------------------------------
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:BLOCK_PORT_CPE - [0:0]
:RE-PROTECT - [0:0]
:FW_IN_HOOK - [0:0]
:FW_LOCAL_HOOK - [0:0]
:FW_OUT_HOOK - [0:0]
:POST_FW_FWD_HOOK - [0:0]
:POST_FW_IN_HOOK - [0:0]
:POST_FW_OUT_HOOK - [0:0]
:PRE_FW_FWD_HOOK - [0:0]
:PRE_FW_IN_HOOK - [0:0]
:PRE_FW_OUT_HOOK - [0:0]
-A INPUT -j PRE_FW_IN_HOOK
-A INPUT -j FW_LOCAL_HOOK
-A INPUT -j POST_FW_IN_HOOK
-A FORWARD -j PRE_FW_FWD_HOOK
-A FORWARD -j FW_IN_HOOK
-A FORWARD -j FW_OUT_HOOK
-A FORWARD -j POST_FW_FWD_HOOK
-A OUTPUT -j PRE_FW_OUT_HOOK
-A OUTPUT -j POST_FW_OUT_HOOK

-A BLOCK_PORT_CPE -m comment --comment BLOCK_PORT_CPE-10 -m set --match-set cpe-management src -j RETURN
-A BLOCK_PORT_CPE -m comment --comment BLOCK_PORT_CPE-20 -m set ! --match-set static-ip dst -m set --match-set cpe-ports dst -j REJECT --reject-with icmp-port-unreachable

-A RE-PROTECT -p tcp -m comment --comment RE-PROTECT-10 -m set ! --match-set acl-ssh src -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A RE-PROTECT -p udp -m comment --comment RE-PROTECT-20 -m set ! --match-set acl-snmp src -m udp --dport 161 -j REJECT --reject-with icmp-port-unreachable

#PROTECT-BEGIN (NAO REMOVA ESSA LINHA COMENTADA)
-A FW_LOCAL_HOOK -i ipoe+ -j    RE-PROTECT
-A FW_LOCAL_HOOK -i bond0.502 -j    RE-PROTECT
-A FW_LOCAL_HOOK -i bond0.501 -j    RE-PROTECT

-A FW_OUT_HOOK -o ipoe+ -j       BLOCK_PORT_CPE
-A FW_OUT_HOOK -o ppp+ -j      BLOCK_PORT_CPE


-A POST_FW_FWD_HOOK -j ACCEPT
-A POST_FW_IN_HOOK -j ACCEPT
-A POST_FW_OUT_HOOK -j ACCEPT
-A PRE_FW_FWD_HOOK -j RETURN
-A PRE_FW_IN_HOOK -j RETURN
-A PRE_FW_OUT_HOOK -j RETURN
COMMIT





# RAW
#------------------------------------------------
*raw
:PREROUTING ACCEPT [277:25629]
:OUTPUT ACCEPT [135:14731]
:CT_HELPER - [0:0]
:CT_IGNORE - [0:0]
:CT_OUTPUT_HOOK - [0:0]
:CT_PREROUTING_HOOK - [0:0]
:CT_TIMEOUT - [0:0]
-A PREROUTING -j CT_IGNORE
-A PREROUTING -j CT_TIMEOUT
-A PREROUTING -j CT_PREROUTING_HOOK
-A PREROUTING -j NOTRACK
-A OUTPUT -j CT_IGNORE
-A OUTPUT -j CT_TIMEOUT
-A OUTPUT -j CT_OUTPUT_HOOK
-A OUTPUT -j NOTRACK
-A CT_HELPER -p tcp -m tcp --dport 1536 -j CT --helper tns
-A CT_HELPER -p tcp -m tcp --dport 1525 -j CT --helper tns
-A CT_HELPER -p tcp -m tcp --dport 1521 -j CT --helper tns
-A CT_HELPER -p udp -m udp --dport 111 -j CT --helper rpc
-A CT_HELPER -p tcp -m tcp --dport 111 -j CT --helper rpc
-A CT_HELPER -j RETURN
-A CT_IGNORE -j RETURN
-A CT_OUTPUT_HOOK -j RETURN
-A CT_PREROUTING_HOOK -j RETURN
-A CT_TIMEOUT -j RETURN
COMMIT
